--- a/index.html
+++ b/index.html
@@ -891,21 +891,21 @@
                     `Player ${this.playerId} slot spinning state reset`,
                   );
                   // 状態表示を更新
-                  this.updateState(this.playerId, window.game1.getState());
+                  // this.updateState(this.playerId, window.game1.getState());
                 } else if (this.playerId === 2 && window.game2) {
                   window.game2.setSlotSpinning(false);
                   console.log(
                     `Player ${this.playerId} slot spinning state reset`,
                   );
                   // 状態表示を更新
-                  this.updateState(this.playerId, window.game2.getState());
+                  // this.updateState(this.playerId, window.game2.getState());
                 }
 
                 // 少し余裕を持って完了を待つ
                 setTimeout(resolve, 300);
               }
             }, 100);
-            
+
             // const timeOutTime = 10000;
 
             // // 最大 timeOutTime ms でタイムアウト
