--- a/index.html
+++ b/index.html
@@ -230,7 +230,11 @@
         position: relative;
         overflow: hidden;
         border-radius: 12px;
-        background: linear-gradient(180deg, #222, #0f0f12);
+        background: linear-gradient(
+          180deg,
+          rgba(2, 2, 2, 0.5),
+          rgba(16, 16, 18, 0.5)
+        );
         box-shadow:
           0 6px 18px rgba(0, 0, 0, 0.7),
           inset 0 2px 0 rgba(255, 255, 255, 0.02);
