Set default source of background video

--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@
             <button onclick="toggleTimeSettings(1)">Close</button>
           </div>
           <video id="video1" autoplay muted loop playsinline>
-            <source src="" id="source1" />
+            <source src="images/background/background-normal.mp4" id="source1" />
           </video>
         </div>
 
@@ -610,7 +610,7 @@
             <button onclick="toggleTimeSettings(2)">Close</button>
           </div>
           <video id="video2" autoplay muted loop playsinline>
-            <source src="" id="source2" />
+            <source src="images/background/background-normal.mp4" id="source2" />
           </video>
         </div>
 
