--- a/index.html
+++ b/index.html
@@ -168,9 +168,21 @@
         will-change: transform;
       }
 
-      .right-panel > *:not(.video-overlay) {
+      /*.right-panel > *:not(.video-overlay) {
         position: relative;
         z-index: 2;
+      }*/
+
+      .background-video {
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: -999;
+        border-radius: 4px;
+        box-shadow: 0 4px 20px rgba(0, 0, 0, 0.6);
+        transform: translateZ(-2px);
+        will-change: transform;
       }
 
       .state {
@@ -562,7 +574,14 @@
             <button onclick="applyTimeSettings(1)">Apply</button>
             <button onclick="toggleTimeSettings(1)">Close</button>
           </div>
-          <video id="video1" autoplay muted loop playsinline>
+          <video
+            class="background-video"
+            id="video1"
+            autoplay
+            muted
+            loop
+            playsinline
+          >
             <source
               src="images/background/background-normal.mp4"
               id="source1"
@@ -612,7 +631,14 @@
             <button onclick="applyTimeSettings(2)">Apply</button>
             <button onclick="toggleTimeSettings(2)">Close</button>
           </div>
-          <video id="video2" autoplay muted loop playsinline>
+          <video
+            class="background-video"
+            id="video2"
+            autoplay
+            muted
+            loop
+            playsinline
+          >
             <source
               src="images/background/background-normal.mp4"
               id="source2"
